@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -210,6 +210,9 @@ static bool test_emptyquerypart1()
 {
     vector<string> emptyterms;
     Xapian::Query query(Xapian::Query::OP_OR, emptyterms.begin(), emptyterms.end());
+    TEST_EXCEPTION(Xapian::InvalidArgumentError,
+		   Xapian::Query bad_query(Xapian::Query::OP_AND,
+					   query, Xapian::Query("x")));
     return true;
 }
 
