@@ -1,3 +1,9 @@
+Fri Feb 13 23:56:44 GMT 2004  Olly Betts <olly@survex.com>
+
+	* api/omquery.cc,tests/api_nodb.cc: Throw error when an empty query is
+	  used to build in the binary operator Query ctor.  Added regression
+	  test.
+
 Fri Feb 13 15:08:09 GMT 2004  Olly Betts <olly@survex.com>
 
 	* HACKING: XAPIAN_DEBUG_TYPES should be XAPIAN_DEBUG_FLAGS.
